styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Akaya Telivigala', cursive;
  line-height: 1.6;
  color: #fff;
  background: #0f0c29;   
  background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29); 
  overflow: hidden; 
}

.game-container {
  max-width: 1100px;
  text-align: center;
  margin: auto;
  margin-bottom: 2rem;
  padding: 0 2rem;
}

.game-header {
  margin: 0.6rem 0;
}

.game-header h1 {
  color: #fdc500;
  font-size: 2.5rem;
  margin-bottom: 1.2rem;
}

.highscore {
  font-size: 1.8rem;
  margin-bottom: 0.8rem;
}

.hp-fields {
  display: flex;
  justify-content: space-evenly;
  font-size: 1.4rem;
  max-width: 1040px;
  margin: auto;
}

.player-hp-field, .computer-hp-field {
  display: flex;
  align-items: center;
}

.player-hp-field-label, .computer-hp-field-label {
  margin-right: 0.2rem;
  margin-bottom: 1.7rem;
}

.player-hp-field-content, .computer-hp-field-content {
  position: relative;
  width: 300px;
  margin-left: 0.8rem;
}

.player-hp-bar, .computer-hp-bar {
  width: 100%;
  height: 1.2rem;
}

.player-hp-field span, .computer-hp-field span {
  position: absolute;
  left: 7.6rem;
  bottom: 1.3rem;
  color: #000;
  font-size: 1.1rem;
}

.instruction-btn, .restart-btn {
  background: #0f0c29;
  color: #fdc500;
  font-size: 1rem;
  margin-bottom: 1rem;
  padding: 0.4rem 1.3rem;
  border: 1px #0f0c29 solid;
  border-radius: 15px;
  border: none;
  outline: none;
  cursor: pointer;
}

.instruction-btn {
  display: inline-block;
}

.restart-btn {
  display: none;
  margin-right: 0.4rem;
}

.instruction-btn:hover, .restart-btn:hover {
  background: #1D1942;
  color: #FFEA26;
}

.choices-text {
  color: #FFD026;
  font-size: 2rem;
}

.choices {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-content: space-between;
  grid-gap: 1.4rem;
  max-width: 800px;
  margin: 1rem auto;
}

.choice-wrapper {
  display: flex;
  justify-content: center;
  align-items: center; 
  width: 142px;
  height: 142px;
  padding: 10px;
  color: #0f0c29;
  background-color: rgba(255, 255, 255, 0.952);
  border: 8px #0f0c29 solid;
  border-radius: 50%;
}

.choice-wrapper:hover {
  color: #1C1652;
  background-color: #fff;
}

.fire-icon-wrapper, .wind-icon-wrapper {
  justify-self: end;
  margin-right: 25px;
}

.water-icon-wrapper, .earth-icon-wrapper {
  justify-self: start;
  margin-left: 25px;
}

.thunder-icon-wrapper, .ice-icon-wrapper {
  justify-self: center;
}

.fire-icon-wrapper {
  border-color: #E70000;
}

.fire-icon-wrapper:hover {
  border-color: #FF0000;
}

.water-icon-wrapper {
  border-color: #0804E6;
}

.water-icon-wrapper:hover {
  border-color: #1F1BF8;
}

.thunder-icon-wrapper {
  border-color: #FFDD00;
}

.thunder-icon-wrapper:hover {
  border-color: #FFDE0B;
}

.ice-icon-wrapper {
  border-color: #00DEDE;
}

.ice-icon-wrapper:hover {
  border-color: #1BFFFF;
}

.wind-icon-wrapper {
  border-color: #ACACAC;
}

.wind-icon-wrapper:hover {
  border-color: #C3C3C3;
}

.earth-icon-wrapper {
  border-color: #57331E;
}

.earth-icon-wrapper:hover {
  border-color: #64381E;
}

.player-choice {
  cursor: pointer;
}

@media (max-width: 575.9px) {
  .game-header h1 {
    font-size: 2.3rem;
  }

  .highscore {
    font-size: 1.6rem;
  }

  .hp-fields {
    font-size: 1.2rem;
    max-width: 300px;
  }

  .player-hp-field-label {
    margin-right: 1.7rem;
  }

  .player-hp-bar, .computer-hp-bar {
    width: 200px;
  }

  .player-hp-field span, .computer-hp-field span {
    left: 4.8rem;
    bottom: 1.5rem;
    font-size: 0.9rem;
  }

  .instruction-btn,
  .restart-btn {
    font-size: 0.8rem;
    padding: 0.3rem 1.2rem;
  }

  .choices-text {
    font-size: 1.8rem;
  }

  .choices {
    grid-gap: 1.2rem; 
    max-width: 330px;
  }

  .choice-wrapper {
    width: 92px;
    height: 92px;
    font-size: 0.6rem;
  }
}

@media (min-width: 576px) and (max-width: 767.9px) {
  .game-header h1 {
    font-size: 2.4rem;
  }

  .highscore {
    font-size: 1.7rem;
  }

  .hp-fields {
    font-size: 1.3rem;
    max-width: 380px;
  }

  .player-hp-field-label {
    margin-right: 1.8rem; 
  }

  .player-hp-bar, .computer-hp-bar {
    width: 250px;
  }

  .player-hp-field span, .computer-hp-field span {
    left: 6.05rem;
    bottom: 1.3rem;
  }

  .instruction-btn,
  .restart-btn {
    font-size: 0.9rem;
  }

  .choices-text {
    font-size: 1.9rem;
  }

  .choices {
    grid-gap: 1.3rem;
    max-width: 400px;
  }

  .choice-wrapper {
    width: 112px;
    height: 112px;
    font-size: 0.7rem;
  }
}

@media (max-width: 767.9px) {
  .game-header h1 {
    margin-bottom: 1rem;
  }

  .hp-fields {
    flex-direction: column;
  }

  .computer-hp-field-label {
    margin-right: 0rem;
  }
}

@media (min-width: 768px) and (max-width: 991.9px) {
  .hp-fields {
    max-width: 710px;
  }

  .player-hp-field-content, .computer-hp-field-content {
    width: 220px;
  }

  .player-hp-field span, .computer-hp-field span {
    left: 5.1rem;
    bottom: 1.3rem; 
  }

  .choices {
    grid-gap: 1.3rem;
    max-width: 460px;
  }

  .choice-wrapper {
    width: 132px;
    height: 132px;
    font-size: 0.9rem;
  }
}

@media (max-width: 991.9px) {
  .restart-btn {
    margin-right: 0.8rem;
  }

  .fire-icon-wrapper,
  .wind-icon-wrapper {
    margin-right: 0.2rem;
  }

  .water-icon-wrapper,
  .earth-icon-wrapper {
    margin-left: 0.2rem;
  }

  .thunder-icon-wrapper {
    justify-self: start;
  }

  .ice-icon-wrapper {
    justify-self: end;
  }
}

